--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: ^1.0.2
+  #firebase_auth: ^3.0.2
+  cloud_firestore: ^3.1.5
+  json_annotation: ^4.4.0
+  http:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,11 +44,15 @@ dependencies:
   equatable: 2.0.3
   # Functional programming thingies
   dartz: 0.10.1
-
+  # Service locator
+  get_it: 7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
