--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   #firebase_auth: ^3.0.2
   cloud_firestore: ^3.1.5
   json_annotation: ^4.4.0
-  http:
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,6 +56,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
+  mockito: ^5.2.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
