--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,17 @@
     "build": true,
     "web": true,
     "tatus": true,
-    "android": true
+    "android": true,
+    "auth\\.flutter-plugins": true,
+    "auth\\.flutter-plugins-dependencies": true,
+    "auth\\.gitignore": true,
+    "auth\\.metadata": true,
+    "auth\\analysis_options.yaml": true,
+    "auth\\README.md": true,
+    "auth\\pubspec.lock": true,
+    "auth\\LICENSE": true,
+    "auth\\CHANGELOG.md": true,
+    "auth\\auth.iml": true,
+    "auth\\.packages": true
   }
 }
