--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  auth:
+    path: ./auth
+
   firebase_core: ^1.0.2
   #firebase_auth: ^3.0.2
   cloud_firestore: ^3.1.5
