--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,10 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
-  mockito: ^5.2.0
+  # mockito: ^5.2.0
+  integration_test:
+  mocktail: ^0.2.0
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
