--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: 7.2.0
   # GetX
   get: ^4.6.1
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,6 +33,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  integration_test:
+  mocktail: ^0.2.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
