--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
+  uses-material-design: true
+
 
   # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
