--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   get_it: 7.2.0
   # GetX
   get: ^4.6.1
+  http: ^0.13.4
+
   
 
   # The following adds the Cupertino Icons font to your application.
